KTS-2153 "CLONE(SUP-299) -Super sluggish web interface after upgrade to 3.4a" In Progress. Fixed dashlet overflows.
Committed By: Jalaloedien Abrahams
Reviewed By: Kevin Fourie

git-svn-id: https://kt-dms.svn.sourceforge.net/svnroot/kt-dms/trunk@6890 c91229c3-7414-0410-bfa2-8a42b809f60b

--- a/resources/css/kt-framing.css
+++ b/resources/css/kt-framing.css
@@ -1928,6 +1928,7 @@ hr {
     z-index:99;
     margin: 8px 0 10px 0;
     background-color:#FFFFFF;
+    overflow: auto;
 }
 
 .ktError .dashboard_block_body
@@ -1935,6 +1936,7 @@ hr {
     z-index:99;
     margin: 0;
     background-color: #ffdd80;
+    overflow: auto;
 }
 
 .ktInfo .dashboard_block_body
@@ -1942,6 +1944,7 @@ hr {
     z-index:99;
     margin: 0;
     background-color: #DEDEDE;
+    overflow: auto;
 }
 
 .dashboard_block .dashboard_block_body  .edit_action 
